apps/prometheus-operator/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.nickolaj.com`)
      kind: Rule
      middlewares:
      - name: traefik-basic-auth
      services:
        - name: prometheus-operated
          port: 9090
  tls:
    secretName: prometheus-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.nickolaj.com`)
      kind: Rule
      middlewares:
      - name: traefik-basic-auth
      services:
        - name: grafana-operated
          port: 80
  tls:
    secretName: grafana-cert
